--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "init": "^0.1.2",
+    "nodemon": "^2.0.12",
     "npm": "^7.19.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
